@startuml
title Final Project - Approval and Notification Diagram

left to right direction
hide circle
hide methods

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam nodesep 95
skinparam ranksep 90

skinparam packageStyle rectangle

skinparam Class {
  BorderColor #334155
  BackgroundColor white
  FontColor #0F172A
}

skinparam Arrow {
  Color #475569
  Thickness 1
}

skinparam Note {
  BackgroundColor #FFF7ED
  BorderColor #F97316
  FontColor #7C2D12
}

package "Approval Workflow" {
  class User {
    +id: bigint
    +name: string
    +email: string
    +requested_role: string
    +requested_course_id: bigint?
    +approved_at: datetime?
    +approved_by: bigint?
    +rejected_at: datetime?
    +rejected_by: bigint?
    +rejection_reason: text?
  }

  class Role {
    +id: bigint
    +name: string
  }
}

package "Academic / Finance Outcome" {
  class Course {
    +id: bigint
    +code: string
    +name: string
    +price: integer
  }

  class StudentTuition {
    +id: bigint
    +student_id: bigint
    +course_id: bigint
    +course_price: integer
  }
}

package "Notification Outcome" {
  class DatabaseNotification {
    +id: uuid
    +type: string
    +notifiable_id: bigint
    +data: json
    +read_at: datetime?
    +created_at: datetime
  }
}

User "*" --> "*" Role : assigned roles
User "*" --> "0..1" Course : requested course
User "1" --> "0..1" StudentTuition : tuition after approval
Course "1" --> "*" StudentTuition : pricing source

User "0..*" --> "0..1" User : approved by
User "0..*" --> "0..1" User : rejected by

DatabaseNotification "*" --> "1" User : received by

note as N1
  New accounts are stored with
  a requested role and remain pending.
  Approval assigns the final role.
  Rejection stores the reason.
end note

note bottom of StudentTuition
  For approved student accounts,
  the selected course price is copied
  into StudentTuition as course_price.
end note

note as N3
  Approval and rejection actions
  create database notifications
  for the affected user.
end note

User .. N1
DatabaseNotification .. N3

@enduml